--- a/public/css/style.css
+++ b/public/css/style.css
@@ -12,8 +12,8 @@ body {
 /* will convert to SASS function */
 .layout-image{
   border-radius: 50%;
-  height: 48px;
-  width: 48px;
+  /*height: 48px;
+  width: 48px;*/
 }
 .spacing18{
   height: 72px;
