basic drag and drop functionality

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -24,7 +24,7 @@
     Length: <input type="text" ng-model="userLength">
     Width: <input type="text" ng-model="userWidth">
 
-    <div class="garden-layout" id="garden-layout">
+    <div class="garden-layout" id="garden-layout" droppable>
     </div>
   </div>
 </div>
