--- a/public/views/home.html
+++ b/public/views/home.html
@@ -23,8 +23,8 @@
 
   <div class="garden-container col-md-9" ng-controller="layoutController">
     <h2>Your Garden</h2>
-    Length: <input type="text" ng-model="userLength">
-    Width: <input type="text" ng-model="userWidth">
+    <!-- Length: <input type="text" ng-model="userLength">
+    Width: <input type="text" ng-model="userWidth"> -->
     <div class="garden row">
       <div class="garden-layout col-md-10" id="garden-layout" droppable>
       </div>
