--- a/public/views/home.html
+++ b/public/views/home.html
@@ -4,19 +4,7 @@
     <h2>List of Plants</h2>
     <ul class="list-group">
       <li class="list-group-item" ng-repeat="plant in plantCtrl.plants">
-        <span>{{plant.name}}</span>
-        <addbutton class="pull-right"></addbutton>
-        <button class="pull-right" ng-show="!showInfo" ng-click="showInfo = !showInfo">v</button>
-        <button class="pull-right" ng-show="showInfo" ng-click="showInfo = !showInfo">^</button>
-        <div class="plantInfo row" ng-show="showInfo">
-          <div class="col-md-8">
-            <p>Type: {{plant.type}}</p>
-            <p>Spacing: {{plant.spacing_min}} - {{plant.spacing_max}}</p>
-            <p>Height: {{plant.height}}</p>
-          </div>
-          <div class="col-md-4 thumbnail">
-            <img src="{{plant.photo_url}}" alt="{{plant.name}}" >
-          </div>
+        <plant></plant>
       </li>
     </ul>
   </div>
@@ -31,6 +19,7 @@
       <div class="compost col-md-2" id="compost" droppable>
         <p id="compost-tooltip" tooltip="Drag plants here to remove them from your garden.">Compost Bin</p>
       </div>
+        <div class="clear-div" clearbutton></div>
     </div>
   </div>
 </div>
