changed src to ng-src

--- a/public/views/_plant.html
+++ b/public/views/_plant.html
@@ -9,6 +9,6 @@
     <p>Height: {{plant.height}}</p>
   </div>
   <div class="col-md-4 thumbnail">
-    <img src="{{plant.photo_url}}" alt="{{plant.name}}" >
+    <img ng-src="{{plant.photo_url}}" alt="{{plant.name}}" >
   </div>
 </div>
