--- a/public/css/style.css
+++ b/public/css/style.css
@@ -45,6 +45,7 @@ plant{
   margin-top: 1em;
   margin-left: .5em;
   text-align: center;
+  z-index: -1;
   background-image: url(http://1v550a3jlx4d2lc773o373z5qn.wpengine.netdna-cdn.com/wp-content/uploads/2011/04/compost-bin.jpg);
   background-size: 100% 100%;
 }
