activated tooltip. changed compost bin styling

--- a/public/views/home.html
+++ b/public/views/home.html
@@ -16,10 +16,11 @@
     <div class="garden row">
       <div class="garden-layout col-md-10" id="garden-layout" droppable>
       </div>
-      <div class="compost col-md-2" id="compost" droppable>
-        <p id="compost-tooltip" tooltip="Drag plants here to remove them from your garden.">Compost Bin</p>
-      </div>
+      <div class="compost col-md-2">
+        <p id="compost-headline" data-toggle="tooltip" title="Drag plants here to remove them from your garden.">Compost Bin</p>
+        <div id="compost" droppable></div>
         <div class="clear-div" clearbutton></div>
+      </div>
     </div>
   </div>
 </div>
