--- a/public/css/style.css
+++ b/public/css/style.css
@@ -46,17 +46,22 @@ plant{
   display: block;
 }
 
-.compost {
+#compost-headline{
+  /*margin-left: .5em;*/
+  padding-top: 1em;
+}
+#compost {
   height: 180px;
   width: 150px;
   color: #f0f0f0;
   border: 2px green solid;
-  margin-top: 1em;
-  margin-left: .5em;
-  text-align: center;
   z-index: -1;
   background-image: url(http://1v550a3jlx4d2lc773o373z5qn.wpengine.netdna-cdn.com/wp-content/uploads/2011/04/compost-bin.jpg);
   background-size: 100% 100%;
+}
+
+#clearAllButton{
+  margin-top: .5em;
 }
 
 /* size will be determined by user input */
