added inputs to dynamically change garden size

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -65,8 +65,8 @@ plant{
 
 /* size will be determined by user input */
 .garden-layout {
-  height: 360px;
-  width: 720px;
+  /*height: 360px;*/
+  /*width: 720px;*/
   padding-left: 0; /* removes bootstrap padding in garden area */
   padding-right: 0;
   border: 2px green solid;
