--- a/public/views/home.html
+++ b/public/views/home.html
@@ -11,10 +11,11 @@
 
   <div class="garden-container col-md-9" ng-controller="layoutController">
     <h2>Your Garden</h2>
-    <!-- Length: <input type="text" ng-model="userLength">
-    Width: <input type="text" ng-model="userWidth"> -->
+    <p>Length: <input type="text" ng-model="userLength"></p>
+    <p>Width: <input type="text" ng-model="userWidth"></p>
+    <p>Dimensions: {{userLength}} X {{userWidth}}</p>
     <div class="garden row">
-      <div class="garden-layout col-md-10" id="garden-layout" droppable>
+      <div class="garden-layout col-md-10" id="garden-layout" droppable ng-style="{height: userLength*40, width: userWidth*40}">
       </div>
       <div class="compost col-md-2">
         <p id="compost-headline" data-toggle="tooltip" title="Drag plants here to remove them from your garden.">Compost Bin</p>
