added remove element functionality to popover

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -8,7 +8,8 @@ html, body {
 }
 
 body {
-  background-image: url(http://babydreambackdrops.com/images/BeachHouseHorizontal.jpg);
+  /*background-image: url(http://babydreambackdrops.com/images/BeachHouseHorizontal.jpg);*/
+  background-image: url(http://www.fashionvsglam.com/wp-content/uploads/2015/03/light-grey-wood-photography-hd-wallpaper-1920x1200-4647-1024x640.jpg);
 }
 
 header{
