--- a/public/views/_gardenPlant.html
+++ b/public/views/_gardenPlant.html
@@ -8,5 +8,5 @@
 </script> -->
 
 <div>{{plant.name}}</div>
-<button class="btn btn-warning" ng-click="gardenPlantPopover.remove()">Remove</button>
+<button class="btn btn-warning" ng-click="gardenPlantPopover.remove(element)">Remove</button>
 <button class="btn btn-default" ng-click="gardenPlantPopover.close()">Cancel</button>
